kio_file: fix data race on static user cache

Now that the kio_file code runs in threads, static data leads to data
races and should be thread_local instead.

Reproduced the issue by running the new test
./jobtest multipleListRecursive
in a TSAN build, after adding QThread::msleep(50) in WorkerThread::run.
Running this test alone will actually fail the test in any case, but that
doesn't matter, TSAN tells us about the data race.
Even with this fix, it still shouts about KUser not being threadsafe,
I'll fix this in KCoreAddons separately.

BUG: 454619